--- a/environment.yml
+++ b/environment.yml
@@ -6,9 +6,8 @@ channels:
   - defaults
 dependencies:
   - python=3.8
-  - pip=21.2.4
-  - cudatoolkit
-  - pytorch=1.10
+  - pip=21.2.4conda acti
+  - pytorch=1.10.1=py3.8_cuda11.3_cudnn8.2.0_0
   - torchvision=0.11.2
   - torchaudio
   - torchmetrics
